 * Moved configuration of devices and programs permissions from SystemSettings to K3b's own settings window (220040)

Bugfixes:
 * Added dynamic hiding of irrelevant actions in mixed project (142954)
 * Added sorting in data project view (191660)
 * Improved performance of adding/removing large number of files to a data project (226029)
 * Fixed crashes when editing mixed project (266942, 265775)

2.0.3
=====
Bugfixes:
 * Missing "Extract Digital Audio with K3b" in device notifier for Audio CD medium (265819)
 * Clearing up track info in audio project when CDDB query failed
 * Improper track number in CDDB track edit window title (276681)
 * Crash on detecting writing speeds (272427)
 * Incorrect capacity returned by HL-DT-ST BH10LS30. Patch by Stephane Berthelot, thanks! (268307)
 * Compilation fails with new FFMPEG (274817)

2.0.2
=====
Changes:
 * Added K3B_ENABLE_HAL_SUPPORT option to the build configuration. It allows to disable any direct calls to HAL (253388)
 * Using Oxygen sounds for events (242395)

Bugfixes:
 * Crash on start when checking device capabilities (246822)
 * Search paths on "Programs" options are not saved (248648)
 * Crash on generation of DVD previews in DVD ripping list (249941, 253639)
 * Crash on closing dialog after succesful audio CD ripping (241630)
 * Crash on device detection (249371)
 * Crash when showing settings window (238819)
 * Fixed playlist sort order (249395)
 * Show K3b also in "System" category in KDE launch menus (250749)
 * Crash when multiple instances start at the same time (253794)
 * Crash after track splitting (261188)
 * Inline editing of tracks in CD ripping view no longer works (250600)

2.0.1
=====
Bugfixes:
 * Freeze on ripping Audio CD using external encoder to MP3 or FLAC (236466)
 * Drag and drop from Dolphin doesn't work (242745)
 * Symbolic links are not added to a project when a folder is added recursively (243555)
 * Install app icons to hicolor so that they are visible in non KDE WMs